--- a/source/stylesheets/_blog_archive.scss
+++ b/source/stylesheets/_blog_archive.scss
@@ -1,4 +1,24 @@
 
+/**
+ * Recent posts list:
+ * Recent posts consist of a time and blog post link
+ *
+ *     @example
+ *     <ul class="blog-archive">
+ *       <li class="archive-item">
+ *         <a href="#">Article 1</a>
+ *         <time>Jan 6, 2014</time>
+ *       </li>
+ *       <li class="archive-item">
+ *        <a href="#">Article 2</a>
+ *        <time>Apr 3, 2015</time>
+ *       </li>
+ *       <li class="archive-item">
+ *         <a href="#">Article 3</a>
+ *         <time>Jan 6, 2016</time>
+ *       </li>
+ *     </ul>
+ */
 ul.blog-archive {
 }
 
