--- a/source/stylesheets/_colors.scss
+++ b/source/stylesheets/_colors.scss
@@ -20,6 +20,7 @@
  */
 
 // color swatches mostly for the style docs
+// TODO: this should be moved into the style guide-specific CSS
 .colorswatch {
   border-radius: 50%;
   width: 100px;
