--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -28,4 +28,5 @@
 @import "custom";
 
 // Stuff just for the styleguide
+// TODO: this should be moved into the style guide-specific CSS
 @import "_styleguide";
