also include li in the tag list

--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -90,7 +90,7 @@ body > div.row:first-of-type {
     display: inline;
     margin: 0 !important;
 
-    .tag {
+    li, .tag {
       //@extend .button;
       //@extend .tiny;
       @include label();
