--- a/source/blog/2015-10-29-decision-making-in-visualization.html.md.erb
+++ b/source/blog/2015-10-29-decision-making-in-visualization.html.md.erb
@@ -34,45 +34,42 @@ recommendations will transfer to other domains and help guide other
 visualization designers.
 
 The field of decision making such as has been described in *The adaptive
-decision maker*[@Payne:1993] is a field that studies how people combine 
-low-level task primitives to solve complex problems with unclear goals.
-These are precisely the types of tasks that people face when doing data
-exploration and analysis. While many people know they found something once
-they found it, the questions are how did they go about finding information
-and is this information they found useful?
+decision maker*<%= cite_inline('Payne:1993') %> is a field that studies how
+people combine low-level task primitives to solve complex problems with unclear
+goals.  These are precisely the types of tasks that people face when doing data
+exploration and analysis. While many people know they found something once they
+found it, the questions are how did they go about finding information and is
+this information they found useful?
 
 Right now I see decision making fitting into an axis of user evaluation as seen
 in the diagram below. On the left are perceptual studies which focus on
 developing principles are generalizable to all humans. An example of this is
-how many colors can we see[@Haroz:2012].  On the other side
+how many colors can we see<%= cite_inline('Haroz:2012') %>.  On the other side
 are design studies which focus on a very specific user and task type. The Fluid
-explorer paper[@Bruckner:2010] is a great example of this type of research.
-So that's the axis from basically all humans to one human doing one task one
-specific way. In between these endpoints, we get more focused on a particular
-user and environment as we move from the left to the right. For example, 
-cognitive traits like locus of control[@Rotter:1966] are specific 
-to a particular person but are relatively consistent over time. Decision making
-and problem solving heuristics depend not just on the particular person but
-also what problem they are trying to solve and even how that problem is 
-presented to them[@Slovic:1983]!
+explorer paper<%= cite_inline('Bruckner:2010') %> is a great example of this
+type of research.  So that's the axis from basically all humans to one human
+doing one task one specific way. In between these endpoints, we get more
+focused on a particular user and environment as we move from the left to the
+right. For example, cognitive traits like locus of control<%=
+cite_inline('Rotter:1966') %> are specific to a particular person but are
+relatively consistent over time. Decision making and problem solving heuristics
+depend not just on the particular person but also what problem they are trying
+to solve and even how that problem is presented to them<%=
+cite_inline('Slovic:1983') %>!
 
 ![axis of user characterization](images/vis_personalization_axis.svg)
 
-{>> diagram with number of people increasing to the left and task complexity
-and specificity to the right <<}
-
 As we move from right to left on this axis we find that the tasks get more
-abstract and have better defined goals. The high-level task of, say,
-"find the best flame simulation for my movie scene" as the case of Fluid
-explorer breaks down into progressively more focused tasks. Medium-level
-tasks are things like "compare multiple simulation outputs." A low-level task
-in this scenario is through visual comparison of two frames of two different
-simulations side by side. I feel that better cognitive modelling can help us
-to better understand how people decompose the high-level task into the 
-eventual low-level tasks.
+abstract and have better defined goals. The high-level task of, say, "find the
+best flame simulation for my movie scene" as the case of Fluid explorer breaks
+down into progressively more focused tasks. Medium-level tasks are things like
+"compare multiple simulation outputs." A low-level task in this scenario is
+through visual comparison of two frames of two different simulations side by
+side. I feel that better cognitive modelling can help us to better understand
+how people decompose the high-level task into the eventual low-level tasks.
 
-So far this is shaping up to be a very interesting but difficult project :)
-It would be linking together many distinct fields and I don't know how much
+So far this is shaping up to be a very interesting but difficult project :) It
+would be linking together many distinct fields and I don't know how much
 trouble this will be. But it's definitely fun to research, think about, and
 discuss!
 
