--- a/source/stylesheets/_citations.scss
+++ b/source/stylesheets/_citations.scss
@@ -27,7 +27,7 @@
     //width: 100%;
     //height: 100%;
   }
-  &:hover > p {
+  &:hover .citation {
     //float: left;
     display: block;
     border: 1px solid $primary-color;
@@ -37,7 +37,7 @@
     background-color: white;
     //width: 100%;
   }
-  & > p {
+  & .citation {
     position: absolute;
     text-align: left;
     //float: none;
