update dm post with links to slides and talk

--- a/source/blog/2015-10-29-decision-making-in-visualization.html.md.erb
+++ b/source/blog/2015-10-29-decision-making-in-visualization.html.md.erb
@@ -5,7 +5,10 @@ tags: decision making, visualization, research
 ---
 
 I gave a talk at the [Visualization for decision making under uncertainty
-workshop](http://uncertainty2015.cs.univie.ac.at) recently on a project of
+workshop](http://uncertainty2015.cs.univie.ac.at)
+([writeup](http://figshare.com/articles/Decision_making_in_uncertainty_visualization/1585848) 
+and [slides](http://www.tomtorsneyweir.com/decision_making-vdmu2015/final_talk)) 
+recently on a project of
 mine. We hypothesize that with better user modeling at a cognitive level we
 could adapt visualization interfaces to their needs. A better model of how a
 user works with a visualization would benefit visualization design in two
