update middleman-citation to 0.3.1

--- a/source/cv.html.slim
+++ b/source/cv.html.slim
@@ -19,7 +19,7 @@ layout: page
       - if content.pubs.kind_of?(Array)
         - pub_list = content.pubs
       - else
-        - pub_list = find_pubs(content.pubs, "Thomas Torsney-Weir")
+        - pub_list = citations_search(content.pubs, "Thomas Torsney-Weir")
       ul.pub-list
         - pub_list.each do |pub|
           li = cite_full(pub)
