--- a/source/cv.tex.erb
+++ b/source/cv.tex.erb
@@ -59,7 +59,7 @@ layout: false
 \author{Thomas Torsney-Weir}
 \email{thomas.torsney-weir@univie.ac.at}
 \phone{+43 650/3451408}
-\address{Schüttelstraße 43/8, 1020 Wien, Austria}
+\address{Grillparzerstraße 5/14a, 1010 Wien, Austria}
 
 
 
