add link for page edit

--- a/source/projects/writing/latex_tips.html.md.erb
+++ b/source/projects/writing/latex_tips.html.md.erb
@@ -2,6 +2,8 @@
 Title: LaTeX tips
 ---
 
+<%= edit_link %>
+
 # LaTeX tips
 
 I wanted to put together a bit of a beginner's guide to writing in LaTeX papers
