update month macro example

--- a/source/projects/writing/latex_tips.html.md.erb
+++ b/source/projects/writing/latex_tips.html.md.erb
@@ -249,6 +249,14 @@ If you put text in the month field of a bib entry then BibTeX will copy this
 verbatim over to the final document, ignoring abbrrviations and such. Using the
 month macros let's BibTeX handle the abbreviations and everything internally. 
 
+The month macros look like:
+
+```tex
+month = dec
+```
+
+Note, there are no curly braces.
+
 ### Use `--` for the page numbers
 
 LaTeX has 3 sizes of dashes. The double dash is the one to use for ranges.
