update bibtex help links

--- a/source/projects/writing/latex_tips.html.md.erb
+++ b/source/projects/writing/latex_tips.html.md.erb
@@ -212,7 +212,7 @@ text will still have, for example, '[1][2].' So, please, double check.
 
 ## BibTeX
 
-Many of these are thanks to [Torsten Möller]().
+Many of these are thanks to [Torsten Möller](http://cs.univie.ac.at/vda/team/worker/infpers/Torsten_Möller) and [John Owens](http://web.ece.ucdavis.edu/~jowens/biberrors.html).
 
 ### Don't trust internet references. 
 
