--- a/source/_address.slim
+++ b/source/_address.slim
@@ -2,6 +2,6 @@ ul.address
   li VDA research group
   li Faculty of Computer Science
   li University of Vienna
-  li Währingerstrasse 29/3.34
+  li Sensengasse 6/2.07
   li 1090 Wien, Austria
 
