update tuner project links

--- a/source/projects/tuner.html.md.erb
+++ b/source/projects/tuner.html.md.erb
@@ -5,7 +5,6 @@ category: research
 summary: We present an approach to optimizing a high-dimensional parameter space for computer simulations.
 teaser: tuner_teaser.png
 video: http://www.youtube.com/watch?v=f44P7ulT2yY
-download: https://github.com/gabysbrain/tuner/releases/latest
 source: https://github.com/gabysbrain/tuner
 paper: http://homepage.univie.ac.at/thomas.torsney-weir/papers/vis11_tuner.pdf
 mendeley: http://www.mendeley.com/research/tuner-principled-parameter-finding-image-segmentation-algorithms-using-visual-response-surface-exploration/
@@ -20,6 +19,8 @@ estimation which we use in conjunction with the actual estimate in (visually)
 guiding the user towards areas that need refinement by placing additional
 sample points. In the second stage the user navigates through the parameter
 space in order to determine areas where the response value is high.
+
+The project site is http://tuner.cs.univie.ac.at
 
 <%= cite_full('Torsney-Weir:2011') %>
 
