--- a/website/site/css/default.css
+++ b/website/site/css/default.css
@@ -9,6 +9,12 @@ body {
 
   margin-left: auto;
   margin-right: auto;
+
+  text-rendering: optimizeLegibility;
+}
+
+h1 {
+  font-size: 2.5rem;
 }
 
 a {
@@ -104,8 +110,8 @@ h2 {
 }
 
 .info-blurb h1 {
-  /*font-size: 3rem;*/
   color: #6f6f6f;
+  font-size: 2rem;
   text-align: left;
   margin: 0;
 }
@@ -144,4 +150,13 @@ h2 {
   vertical-align: middle;
   text-decoration: none;
 }
+
+.article-title {
+  margin-bottom: 0.25rem;
+}
+
+.byline {
+  margin-bottom: 0.5rem;
+}
+
 
