--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'UA-45010384-1');
     </script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
