update fontawesome and use new researchgate icon and add orcid id

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tom Torsney-Weir</title>
     <link rel="stylesheet" href="/css/normalize.css" />
-    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/bfc83b0cb2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/default.css" />
   </head>
   <body>
